[package]
edition = "2018"
name = "newsapi"
version = "0.1.0"

authors = ["sebbev"]
description = "Clinews is a news aggregator for the command line"
license = "MIT"

[dependencies]
reqwest = {version = "0.11.9", features = ["json"], optional = true}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
thiserror = "1.0.30"
ureq = {version = "2.4.0", features = ["json"]}
url = "2.2.2"

[features]
async = ["reqwest"]
